objects/Requirement__c.object
<CustomObject>
    <description>It consists of all the user stories, change requests, tickets which impacts the components.</description>
    <fields>
        <fullName>Related_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It captures the user story related to ticket.</description>
        <label>Related User Story</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement_Description__c</fullName>
        <description>Description of requirement.</description>
        <label>Requirement Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Type__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requirement Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The sprint under which the requirement comes.</description>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Allocated User Stories</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Type__c</columns>
        <columns>Related_User_Story__c</columns>
        <columns>Sprint__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <recordTypes>
        <fullName>HyperCare</fullName>
        <active>true</active>
        <description>It captures the hypercare tickets</description>
        <label>HyperCare</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ticket</fullName>
        <active>true</active>
        <description>It captures the tickets.</description>
        <label>Ticket</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Story</fullName>
        <active>true</active>
        <description>It captures the user stories.</description>
        <label>User Story</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>